# aprpc

./: .gitignore  README.md  build.sh
config/: config.yaml
docs/: client-async-callback-upgrade.md  logger-benchmark-raw-2026-04-13.txt  logger-benchmark-raw-2026-04-26-double-buffer.txt  logger-benchmark-report-2026-04-13.md  logger-benchmark-report-2026-04-26-double-buffer-vs-baseline.md  logger-benchmark-summary-2026-04-13.csv  logger-benchmark-summary-2026-04-26-double-buffer.csv  long-connection-upgrade.md
example/: CMakeLists.txt
example/benchmark/: CMakeLists.txt  logger_perf.cpp  rpc_bench.cpp
example/callee/: userservice.cpp
example/caller/: CMakeLists.txt  calluserservice.cpp
lib/include/: logger.h  logwriter.h  rpcapplication.h  rpcchannel.h  rpcconfig.h  rpccontroller.h  rpcprovider.h  sequentiallogwriter.h  zookeeperutil.h
scripts/: gdb_script.gdb
src/: CMakeLists.txt  logger.cpp  mmaplogwriter.cpp  rpcapplication.cpp  rpcchannel.cpp  rpcprovider.cpp  sequentiallogwriter.cpp  zookeeperutil.cpp
src/include/: asyncqueue.h  logger.h  mmaplogwriter.h  sequentiallogwriter.h  zookeeperutil.h
